<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="activity_sample_code">FreemeUI</string>
    <string name="styled_12_hour_clock">MM/<font color="red"><b>dd</b></font>/yy h<font color="#ffff0000"><sup><small>mm</small></sup></font><b>aa</b></string>
    <string name="styled_24_hour_clock">MM/<font color="red"><b>dd</b></font>/yy k<font color="#ffff0000"><sup><small>mm</small></sup></font></string>
    <string name="styled_12_hour_clock2">\'Custom font:\' <font color="@android:color/primary_text_holo_dark" face="sans-serif-thin">MM/dd/yy h:mm aa</font></string>
    <string name="styled_24_hour_clock2">\'Custom font:\' <font color="@android:color/primary_text_holo_dark" face="sans-serif-thin">MM/dd/yy k:mm</font></string>
    <string name="tabs_1_tab_1">tab1</string>
    <string name="tabs_1_tab_2">tab2</string>
    <string name="tabs_1_tab_3">tab3</string>
    <string name="activity_hello_world">App/Activity/<b>Hello <i>World</i></b></string>
    <string name="hello_world"><b>Hello, <i>World!</i></b></string>
    <string name="activity_dialog">App/Activity/Dialog</string>
    <string name="dialog_activity_text">Example of how you can use the
            Theme.Dialog theme to make an activity that looks like a
            dialog.  It also has lots of text to show how text wrapping (and
            corresponding window size adjustment) can happen in a dialog.</string>
    <string name="dialog_activity_add">Add content</string>
    <string name="dialog_activity_remove">Remove content</string>
    <string name="activity_custom_dialog">App/Activity/Custom Dialog</string>
    <string name="custom_dialog_activity_text">Example of how you can use a
            custom Theme.Dialog theme to make an activity that looks like a
            customized dialog, here with an ugly frame.</string>
    <string name="activity_overscan">App/Activity/Overscan</string>
    <string name="quick_contacts_demo">App/Activity/QuickContactsDemo</string>
    <string name="activity_wallpaper">App/Activity/Wallpaper</string>
    <string name="activity_setwallpaper">App/Activity/SetWallpaper</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="randomize">Randomize</string>
    <string name="activity_screen_orientation">App/Activity/Screen Orientation</string>
    <string name="screen_orientation_summary">Demonstrates the available screen
        orientation modes.  Often you want to set the desired mode in your manifest
        instead of programmatically.</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="activity_translucent">App/Activity/Translucent</string>
    <string name="translucent_background">Example of how you can make an
            activity have a translucent background, compositing over
            whatever is behind it.</string>
    <string name="activity_translucent_blur">App/Activity/Translucent Blur</string>
    <string name="activity_animation">App/Activity/Animation</string>
    <string name="activity_animation_msg">Press a button to launch an activity with a custom animation.</string>
    <string name="activity_animation_fade">Fade in</string>
    <string name="activity_animation_zoom">Zoom in</string>
    <string name="activity_modern_animation_fade">Modern fade in</string>
    <string name="activity_modern_animation_zoom">Modern zoom in</string>
    <string name="activity_scale_up_animation">Scale up</string>
    <string name="activity_zoom_thumbnail_animation">Thumbnail zoom</string>
    <string name="activity_no_animation">No Animation</string>
    <string name="activity_save_restore">App/Activity/Save &amp; Restore State</string>
    <string name="save_restore_msg">Demonstration of saving and restoring activity state in onSaveInstanceState() and onCreate().</string>
    <string name="saves_state">This text field saves its state:</string>
    <string name="no_saves_state">This text field does not save its state:</string>
    <string name="initial_text">Initial text.</string>
    <string name="soft_input_modes">App/Activity/Soft Input Modes</string>
    <string name="soft_input_modes_summary">Shows how different soft input modes impact
        application resizing due to an input method.</string>
    <string name="soft_input_modes_label">Resize mode: </string>
    <string name="soft_input_modes_content">This is a part of the application\'s UI that
        can resize to adjust for the IME.</string>
    <string name="soft_input_modes_initial_text">Text editor.\n\nTap to show the IME,
        which will cause this window to resize as requested.</string>
    <string name="activity_persistent">App/Activity/Persistent State</string>
    <string name="persistent_msg">Demonstration of persistent activity state with getPreferences(0).edit() and getPreferences(0).</string>
    <string name="activity_recreate">App/Activity/Recreate</string>
    <string name="activity_recreate_msg">Demonstration recreating an activity, to have
        it reconstructed with significant new changes.  In this case the theme is changed.</string>
    <string name="recreate">Recreate</string>
    <string name="activity_finish_affinity">App/Activity/Finish Affinity</string>
    <string name="activity_receive_result">App/Activity/Receive Result</string>
    <string name="pick_result">Pick a result to send, or BACK to cancel.</string>
    <string name="corky">Corky</string>
    <string name="violet">Violet</string>
    <string name="activity_forwarding">App/Activity/Forwarding</string>
    <string name="forwarding">Press the button to go forward to the next activity.  This activity will stop, so you will no longer see it when going back.</string>
    <string name="go">Go</string>
    <string name="forward_target">Press back button and notice we don\'t see the previous activity.</string>
    <string name="activity_redirect">App/Activity/Redirection</string>
    <string name="redirect_enter">Press the button to start the example.  The next activity will conditionally redirect to another activity to collect data from the user.</string>
    <string name="redirect_main">You now see the main activity running normally because the user text has been set to:</string>
    <string name="clear_text">Clear and Exit</string>
    <string name="new_text">New Text</string>
    <string name="redirect_getter">Enter the text that will be used by the main activity.  Press back to cancel.</string>
    <string name="apply">Apply</string>
    <string name="activity_presentation">App/Activity/Presentation</string>
    <string name="presentation_activity_text">This activity demonstrates how to use a
                  Presentation and the DisplayManager to show content on other Displays.\n
                  Try connecting a secondary display and watch what happens.\n
                  Selecting a Display will open a Presentation on it.</string>
    <string name="presentation_show_all_displays">Show all displays</string>
    <string name="presentation_photo_text">Showing photo #%1$d on display #%2$d: %3$s.</string>
    <string name="presentation_info_text">Info</string>
    <string name="presentation_display_id_text">Display #%1$d: %2$s</string>
    <string name="presentation_alert_info_text">Display #%1$d Info</string>
    <string name="presentation_alert_dismiss_text">OK</string>
    <string name="activity_presentation_with_media_router">App/Activity/Presentation with Media Router</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_ringtone_preference">Ringtone preference</string>
    <string name="summary_ringtone_preference">An example that uses a ringtone dialog</string>
    <string name="jumps_preference">Jump preferences</string>
    <string name="title_jump_preference">Jump preference</string>
    <string name="title_jump_preference_without_jump_and_unclickable">Jump preference no-jump and unclickable</string>
    <string name="title_jump_preference_without_jump_and_unclickable_with_summary">Jump preference</string>
    <string name="right_summary">right summary</string>
    <string name="bottom_summary">bottom summary </string>
    <string name="title_jump_preference_with_status">Jump preference with multi-status</string>
    <string name="status_jump_preference_1">Status 1</string>
    <string name="status_jump_preference_2">Status 2</string>
    <string name="status_jump_preference_3">Status 3</string>
    <string name="title_position_preference_head">Preference head</string>
    <string name="title_position_preference_middle">Preference middle</string>
    <string name="title_position_preference_tail">Preference tail</string>
    <string name="title_position_preference_full">Preference full</string>
    <string name="title_fullscreen_list_preference">Fullscreem list preference</string>
    <string name="summary_fullscreen_list_preference">An example that uses an Fullscreem list dialog</string>
    <string name="title_freeme_edittext_preference">Freeme edit text preference</string>
    <string name="summary_freeme_edittext_preference">An example that uses a freeme edit text dialog</string>
    <string name="buttons_1_normal">Normal</string>
    <string name="buttons_1_small">Small</string>
    <string name="buttons_1_toggle">Toggle</string>
    <string name="notification_label_standard_notification">1. Show standard notification</string>
    <string name="notification_label_bundled_notification">2. Show bundled notifications</string>
    <string name="notification_label_direct_reply_notification">3. Show reply notification</string>
    <string name="notification_label_custom_content_view_notification">4. Show custom content view notification</string>
    <string name="notification_label_custom_content_big_view_notification">5. Show custom content big view notification</string>
    <string name="notification_label_custom_content_normal_and_big_view_notification">6. Show custom normal and big content views notification</string>
    <string name="notification_label_custom_media_content_view_notification">7. Show custom media content view notifications</string>
    <string name="notification_label_heads_up_custom_layout_notification">8. Show custom layout heads up notification</string>
    <string name="notification_label_inbox_style_notification">9. Show inbox style notification</string>
    <string name="notification_label_big_picture_style_notification">10. Show big picture notification</string>
    <string name="notification_label_download_style_notification">11. Show download notification</string>
</resources>