<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Lots of buttons = need scrolling -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="Normal Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!-- Regular sized buttons -->
        <Button android:id="@+id/button_normal"
            android:text="@string/buttons_1_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="Normal Pressed"
            android:state_pressed="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="Normal Disable"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Small buttons -->
        <TextView
            android:text="Small Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button android:id="@+id/button_small"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/buttons_1_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="Small Focused"
            android:state_focused="true"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="Small Disable"
            android:enabled="false"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--you can change the text with android:textOn /textOff-->
        <ToggleButton android:id="@+id/button_toggle"
            android:text="@string/buttons_1_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--Borldless button show as follow-->
        <TextView
            android:text="Borderless Button showed as followed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:text="Borderless button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    
</ScrollView>
